Update index.html dan produk-layanan.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beranda - TEFA FeedLot & Sapi Perah Polije</title>
+    <title>Beranda - TEFA FeedLot & Sapi Perah POIJE</title>
     <meta name="description" content="TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Teaching Factory yang menghadirkan produk berkualitas tinggi dengan standar modern dan inovasi terbaik.">
 
     <!-- Tailwind CSS -->
@@ -36,7 +36,7 @@
     <section id="beranda" class="relative h-screen flex items-center justify-center text-white" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/upload-wa/hero.jpg') center/cover no-repeat;">
         <div class="text-center px-4 animate-fade-in">
             <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-4 leading-tight animate-fade-in">
-                TEFA Feedlot &<br> Sapi Perah Polije
+                TEFA Feedlot &<br> Sapi Perah POLIJE
             </h2>
             <p class="text-lg sm:text-xl mb-8 max-w-2xl mx-auto animate-fade-in" style="animation-delay: 0.2s;">
                 Teaching Factory yang menghadirkan produk berkualitas tinggi dengan<br class="hidden sm:block"> standar modern dan inovasi terbaik untuk masyarakat
@@ -181,7 +181,7 @@
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Riset & Inovasi</h4>
                     <p class="text-gray-600 text-center">
-                        Mendukung penelitian dan inovasi di inuang teknologi peternakan dan Pakan produk yang berkelanjutan.
+                        Mendukung penelitian dan inovasi di ruang teknologi peternakan dan Pakan produk yang berkelanjutan.
                     </p>
                 </div>
 
@@ -279,7 +279,7 @@
                 <!-- FAQ 1 -->
                 <div class="faq-item bg-gray-50 rounded-lg overflow-hidden">
                     <button class="faq-question w-full text-left px-6 py-4 flex justify-between items-center hover:bg-gray-100 transition-colors">
-                        <span class="font-semibold text-gray-800">Bagaimana cara membeli produk dari Tefa Sapi
+                        <span class="font-semibold text-gray-800">Bagaimana cara membeli produk dari Tefa Feedlot dan Sapi perah
                             Polije?</span>
                         <svg class="w-5 h-5 text-gray-600 transition-transform duration-200" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24">
@@ -297,7 +297,7 @@
                 <!-- FAQ 2 -->
                 <div class="faq-item bg-gray-50 rounded-lg overflow-hidden">
                     <button class="faq-question w-full text-left px-6 py-4 flex justify-between items-center hover:bg-gray-100 transition-colors">
-                        <span class="font-semibold text-gray-800">Apakah produk dikirim ke luar daerah/negara?</span>
+                        <span class="font-semibold text-gray-800">Apakah produk  Tefa Feedlot dan Sapi perah Polije dikirim ke luar daerah/negara?</span>
                         <svg class="w-5 h-5 text-gray-600 transition-transform duration-200" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7">
@@ -314,7 +314,7 @@
                 <!-- FAQ 3 -->
                 <div class="faq-item bg-gray-50 rounded-lg overflow-hidden">
                     <button class="faq-question w-full text-left px-6 py-4 flex justify-between items-center hover:bg-gray-100 transition-colors">
-                        <span class="font-semibold text-gray-800">Apakah Peternakan Polije terbuka untuk kunjungan
+                        <span class="font-semibold text-gray-800">Apakah  Tefa Feedlot dan Sapi perah Polije terbuka untuk kunjungan
                             edukasi?</span>
                         <svg class="w-5 h-5 text-gray-600 transition-transform duration-200" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24">
