--- a/produk-layanan.html
+++ b/produk-layanan.html
@@ -162,7 +162,7 @@
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Layanan Konsumen</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
-                        Kami berkomitmen untuk melayani pelanggan yang ingin product yang semuai.
+                        Kami berkomitmen untuk melayani pelanggan yang ingin product yang sesuai.
                     </p>
                 </div>
             </div>
