feat: Add new image assets and update image references on main, gallery, product, and facility pages.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <!-- Produk 1 -->
                 <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
                     <div class="-mx-6 -mt-6 mb-6">
-                        <img src="assets/images/upload-wa/sapi-perah.jpg" alt="Sapi Perah" class="w-full h-48 object-cover rounded-t-xl">
+                        <img src="assets/images/upload-wa/sapiperah.jpg" alt="Sapi Perah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h4>
                     <p class="text-gray-600 text-center mb-4">
@@ -177,7 +177,7 @@
                 <!-- Layanan 2 -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.1s;">
                     <div class="-mx-6 -mt-6 mb-6">
-                        <img src="assets/images/upload-wa/riset.jpg" alt="Riset & Inovasi" class="w-full h-48 object-cover rounded-t-xl">
+                        <img src="assets/images/upload-wa/inovasi.jpg" alt="Riset & Inovasi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Riset & Inovasi</h4>
                     <p class="text-gray-600 text-center">
@@ -188,7 +188,7 @@
                 <!-- Layanan 3 -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.2s;">
                     <div class="-mx-6 -mt-6 mb-6">
-                        <img src="assets/images/produk-layanan/kemitraan-industri.png" alt="Kemitraan Industri" class="w-full h-48 object-cover rounded-t-xl">
+                        <img src="assets/images/upload-wa/kerjasama.jpg" alt="Kemitraan Industri" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h4 class="text-xl font-bold text-gray-800 text-center mb-3">Kemitraan Industri</h4>
                     <p class="text-gray-600 text-center">
