--- a/produk-layanan.html
+++ b/produk-layanan.html
@@ -54,7 +54,7 @@
                 <!-- Product 1: Sapi Perah -->
                 <div class="product-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate zoom-in">
                     <div class="-mx-6 -mt-6 mb-6">
-                        <img src="assets/images/upload-wa/sapi-perah.jpg" alt="Sapi Perah" class="w-full h-48 object-cover rounded-t-xl">
+                        <img src="assets/images/upload-wa/sapiperah.jpg" alt="Sapi Perah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Sapi Perah</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -125,7 +125,7 @@
                 <!-- Service 2: Riset & Inovasi -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.1s;">
                     <div class="-mx-6 -mt-6 mb-6">
-                        <img src="assets/images/upload-wa/riset.jpg" alt="Riset & Inovasi" class="w-full h-48 object-cover rounded-t-xl">
+                        <img src="assets/images/upload-wa/inovasi.jpg" alt="Riset & Inovasi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Riset & Inovasi</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -136,7 +136,7 @@
                 <!-- Service 3: Kemitraan Industri -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.2s;">
                     <div class="-mx-6 -mt-6 mb-6">
-                        <img src="assets/images/produk-layanan/kemitraan-industri.png" alt="Kemitraan Industri" class="w-full h-48 object-cover rounded-t-xl">
+                        <img src="assets/images/upload-wa/kerjasama.jpg" alt="Kemitraan Industri" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Kemitraan Industri</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
@@ -158,7 +158,7 @@
                 <!-- Service 5: Layanan Konsumen -->
                 <div class="service-card bg-white rounded-xl shadow-lg p-6 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100 scroll-animate fade-up" style="transition-delay: 0.4s;">
                     <div class="-mx-6 -mt-6 mb-6">
-                        <img src="assets/images/produk-layanan/layanan-konsumen.jpg" alt="Layanan Konsumen" class="w-full h-48 object-cover rounded-t-xl">
+                        <img src="assets/images/upload-wa/layanan.jpg" alt="Layanan Konsumen" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Layanan Konsumen</h3>
                     <p class="text-gray-600 text-center leading-relaxed text-sm">
