fix: Correct typo in page title from POIJE to POLIJE.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beranda - TEFA FeedLot & Sapi Perah POIJE</title>
+    <title>Beranda - TEFA FeedLot & Sapi Perah POLIJE</title>
     <meta name="description" content="TEFA FEEDLOT DAN SAPI PERAH POLITEKNIK NEGERI JEMBER - Teaching Factory yang menghadirkan produk berkualitas tinggi dengan standar modern dan inovasi terbaik.">
 
     <!-- Tailwind CSS -->
